--- a/data/publications.bib
+++ b/data/publications.bib
@@ -4,5 +4,7 @@
   journal={Finance Research Letters},
   pages={108922},
   year={2026},
+  doi={10.1016/j.frl.2025.108922},
+  url={https://authors.elsevier.com/c/1m8yI5VD4KyjWs},
   publisher={Elsevier}
 }
