--- a/data/publications.bib
+++ b/data/publications.bib
@@ -6,5 +6,6 @@
   year={2026},
   doi={10.1016/j.frl.2025.108922},
   url={https://authors.elsevier.com/c/1m8yI5VD4KyjWs},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  code = {https://github.com/cheolminshin/Asymptotic-pricing-of-short-maturity-near-the-money-options-in-stochastic-volatility-models.git}
 }
