--- a/data/publications.bib
+++ b/data/publications.bib
@@ -5,7 +5,7 @@
   pages={108922},
   year={2026},
   doi={10.1016/j.frl.2025.108922},
-  url={https://authors.elsevier.com/c/1m8yI5VD4KyjWs},
+  url={https://doi.org/10.1016/j.frl.2025.108922},
   publisher={Elsevier},
   code = {https://github.com/cheolminshin/asymptotic-pricing.git}
 }
